# faceRecognitionDB

./: .gitignore  CMakeLists.txt  DBManagerInterface.cpp  DBManagerInterface.h  Database.cpp  Database.h  Database.hpp  Makefile  README.md  db.hpp  test.cpp
include/: DBManagerInterface.h  EnvironmentVariables.h
src/: Cuatec.cpp  DBManagerInterface.cpp
src/include/: Cuatec.h  DBManagerInterface.h
